fix: fixed getFirst() issue in GameService